Daniel's second commit

--- a/KDH/gugudan.html
+++ b/KDH/gugudan.html
@@ -14,6 +14,7 @@
     <div id="displayAnswer"></div>
 </body>
 <script>
+    //random 숫자를 구하는 함수
     function getRandomInt() {
         return Math.floor(Math.random() * 10);
     };
@@ -25,6 +26,7 @@
     let c = a * b;
     console.log(c)
 
+    //정답을 체크해주는 함수
     function calculateAnwser() {
         let correct = "You are correct! New question will appear shortly.";
         let wrong = "You are wrong! Try again!";
